clusters/hybrid01/config/navidrome/navidrome-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: navidrome
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "true"
