clusters/hybrid01/config/navidrome/navidrome-deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: navidrome
  namespace: navidrome
  labels:
    app: navidrome
spec:
  replicas: 1
  securityContext: 
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 1000
    fsGroup: 1000
    allowPrivilegeEscalation: false
    readOnlyRootFilesystem: true
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      hostUsers: false
      containers:
        - name: navidrome
          image: deluan/navidrome:0.64.2
          securityContext: 
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            fsGroup: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          ports:
            - name: http
              containerPort: 4533
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 500M
            limits:
              memory: 1500M
          volumeMounts:
            - name: music-library
              mountPath: /music
              readOnly: true
            - name: data
              mountPath: /data
            - name: cache
              mountPath: /cache
      volumes:
      - name: music-library
        persistentVolumeClaim:
          claimName: music-library
      - name: data
        persistentVolumeClaim:
          claimName: navidrome-data
      - name: cache
        emptyDir:
          medium: Memory
