clusters/hybrid01/config/navidrome/beets.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: beets
  namespace: navidrome
  labels:
    app: music-beets
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: music-beets
  template:
    metadata:
      labels:
        app: music-beets
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      containers:
        - name: beets
          image: ghcr.io/frantathefranta/beets-custom:2.5.1
          command: 
          # - /usr/local/bin/beet version
          - /bin/sh
          - -c
          - |
            while true; do sleep 2; done
          ports:
            - name: http
              containerPort: 8337
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 150M
            limits:
              memory: 500M
          volumeMounts:
            - name: ingest
              mountPath: /ingest
            - name: music-library
              mountPath: /library
            - name: beets-data
              mountPath: /data
            - name: beets-config
              mountPath: "/config/config.yaml"
              subPath: config.yaml
              readOnly: true
      volumes:
      - name: ingest
        persistentVolumeClaim:
          claimName: ingest
      - name: music-library
        persistentVolumeClaim:
          claimName: music-library
      - name: beets-data
        persistentVolumeClaim:
          claimName: beets-data
      - name: beets-config
        configMap:
          name: beets-config
---
apiVersion: v1
kind: Service
metadata:
  name: beets
  namespace: navidrome
  labels:
    app: music-beets
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 8337
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: music-beets
