clusters/hybrid01/config/navidrome/navidrome-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: navidrome
  labels:
    app: navidrome
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 4533
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: navidrome
