clusters/hybrid01/config/navidrome/navidrome-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: navidrome-external
  namespace: navidrome
spec:
  hosts:
  - "music.jkulzer.dev"
  gateways:
  - istio-external-gateway/external-gateway
  http:
  - match:
    route:
    - destination:
        host: navidrome
        port:
          number: 4533
