clusters/hybrid01/config/navidrome/filebrowser.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: copyparty
  namespace: navidrome
  labels:
    app: music-filebrowser
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: music-filebrowser
  template:
    metadata:
      labels:
        app: music-filebrowser
    spec:
      containers:
        - name: copyparty
          image: ghcr.io/9001/copyparty-ac:1.20.25 
          ports:
            - name: http
              containerPort: 3923
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 80M
            limits: 200M
          volumeMounts:
            - name: ingest
              mountPath: /ingest
            - name: music-library
              mountPath: /library
            - name: config
              mountPath: /cfg
      volumes:
      - name: ingest
        persistentVolumeClaim:
          claimName: ingest
      - name: music-library
        persistentVolumeClaim:
          claimName: music-library
      - name: config
        configMap:
          name: copyparty-config
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: navidrome
  labels:
    app: music-filebrowser
spec:
  type: ClusterIP
  ports:
    - port: 3923
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: music-filebrowser
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: copyparty
  namespace: navidrome
spec:
  hosts:
  - "musiclibrary.jkulzer.dev"
  gateways:
  - istio-external-gateway/external-gateway
  - istio-internal-gateway/internal-gateway
  http:
  - match:
    retries:
      attempts: 0
    headers:
      request:
        remove:
        - TE
    route:
    - destination:
        host: filebrowser
        port:
          number: 3923
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: filebrowser-music-authelia-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: gateway 
  action: CUSTOM
  provider:
    name: "authelia"
  rules:
  - to:
    - operation:
        hosts:
          - "musiclibrary.jkulzer.dev"
