clusters/hybrid01/config/navidrome/navidrome-authpolicy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: navidrome-authelia-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: gateway 
  action: CUSTOM
  provider:
    name: "authelia"
  rules:
  - to:
    - operation:
        hosts:
          - "music.jkulzer.dev"
        notPaths: 
        - "/rest*"
# ---
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   name: navidrome-allow-rest-api
#   namespace: istio-system
# spec:
#   selector:
#     matchLabels:
#       istio: gateway 
#   rules:
#   - to:
#     - operation:
#         hosts:
#           - "music.jkulzer.dev"
#         paths:
#           - "/rest*"
